--- a/angular.json
+++ b/angular.json
@@ -124,6 +124,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "cards-front"
+    }
+  },
+  "defaultProject": "cards-front",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
